--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;700&display=swap');
+
+* {
+  background-color: #FCFCF8;
+  color: #0A0A0A;
+  box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
+  margin: 0;
+  padding: 0;
+  scroll-behavior: smooth;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.coinsContainer {
   align-items: center;
+  color:#D9D9D9;
+  display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top: 1.875rem;
+
 }
 
-.App-link {
-  color: #61dafb;
+
+.header {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 2.5rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.inputField {
+  border: none;
+  border-radius: 0.25rem;
+  box-shadow: 0 0 3pt 2pt #D9D9D9;
+  color: #0A0A0A;
+  padding-left: 1rem;
+  font-size: 0.875rem;
+  height: 2.625rem;
+  width: 16.25rem;
+}
+
+/* Media Query Block*/
+
+@media (max-width: 520px) {
+  .header {
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
   }
-  to {
-    transform: rotate(360deg);
+
+  h1.brand {
+    padding-bottom: 1rem;
   }
 }
